Remove checks for Java versions older than 11.
Motivation:

Netty 5's runtime requirement >= Java 11

PlatformDependent0 was not included in previous clean up (#11787)

No need to check if the method
Unsafe#copyMemory(Object, long, Object, long, long)(since JDK 7) exists or not since Netty 5 requires Java 11 or newer. (#1061)

Modifications:

Remove version checks and compatibility fallbacks.

set default javaVersion to 11

Result:

Clean up